--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -1,5 +1,7 @@
 spring:
   jpa:
+    hibernate:
+      ddl-auto: create
     show-sql: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
